# sigmatch

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE-MIT  README.md
.github/workflows/: windows.yml
assets/: README.md
cmake/: sigmatch-config.cmake
examples/: 01.hello_sigmatch.cpp  02.custom_reader.cpp  03.custom_target.cpp  CMakeLists.txt
include/sigmatch/: sigmatch.hpp
tests/: CMakeLists.txt  includes.hpp  main.cpp  test_details.cpp  test_literal_sig.cpp  test_literal_sig_ghidra.cpp  test_literal_sig_wf.cpp  test_literal_sig_wf_ghidra_invalid_binary.cpp  test_literal_sig_wf_ghidra_invalid_bits.cpp  test_literal_sig_wf_invalid_hex.cpp  test_matcher.cpp  test_searcher.cpp  test_target.cpp
